# pyliasis

./: grammar.lark  main.py  pyproject.toml
example/: general.lia
pyliasis/: __init__.py  liaparser.py
tests/: test_assign.py  test_binary.py  test_class.py  test_cond.py  test_def.py  test_for.py  test_funccall.py  test_import.py  test_list.py  test_unary.py  test_while.py
